--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,35 @@
-<router-outlet></router-outlet>
+<div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper nav-position-header">
+            <div class="header">
+                <h5>Dashboard</h5>
+            </div>
+        </div>
+    </nav>
+</div>
+
+<ul id="slide-out" class="sidenav sidenav-fixed">
+    <li>
+        <div class="user-view">
+            <div class="background">
+                <img src="images/office.jpg">
+            </div>
+        </div>
+    </li>
+
+    <li routerLinkActive="active"><a class="waves-effect active" routerLink="/dashboard">Dashboard</a></li>
+    <li>
+        <div class="divider"></div>
+    </li>
+   
+</ul>
+
+
+<div class="main">
+    <div class="container">
+        <div class="row">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+
+</div>
