--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
     <nav>
         <div class="nav-wrapper nav-position-header">
             <div class="header">
-                <h5>Dashboard</h5>
+                <!-- <h5>Dashboard</h5> -->
+                
             </div>
         </div>
     </nav>
@@ -11,13 +12,11 @@
 <ul id="slide-out" class="sidenav sidenav-fixed">
     <li>
         <div class="user-view">
-            <div class="background">
-                <img src="images/office.jpg">
-            </div>
+                <img src="../assets/img/aerobotics_logo_new.svg">
         </div>
     </li>
 
-    <li routerLinkActive="active"><a class="waves-effect active" routerLink="/dashboard">Dashboard</a></li>
+    <li routerLinkActive="active"><a class="waves-effect active center-text" routerLink="/dashboard">Dashboard</a></li>
     <li>
         <div class="divider"></div>
     </li>
