--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,68 +1,75 @@
+<div class="row">
+  <div class="col s12">
 
+     
 
-  <div class="row">
-      <div class="col s12">
-        <ul class="tabs">
-          <li class="tab col s3"><a href="#test1">Test 1</a></li>
-          <li class="tab col s3"><a class="active" href="#test2">Test 2</a></li>
-          <li class="tab col s3 disabled"><a href="#test3">Disabled Tab</a></li>
-          <li class="tab col s3"><a href="#test4">Test 4</a></li>
-        </ul>
-      </div>
-      <div id="test1" class="col s12">Test 1</div>
-      <div id="test2" class="col s12">Test 2</div>
-      <div id="test3" class="col s12">Test 3</div>
-      <div id="test4" class="col s12">Test 4</div>
+    <ul class="tabs">
+      <li class="tab col s3"><a href="#scoutMission" class="active">Scout Missions</a></li>
+      <li class="tab col s3"><a href="#schedule">Schedule</a></li>
+    </ul>
+  </div>
+  <div id="scoutMission" class="col s12">
+  
+    <div class="card-panel">
+      <h5 class="center-text">Scout Missions</h5>
+      <table class="responsive-table highlight striped centered">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>ID </th>
+            <th>Farm ID</th>
+            <th>Date</th>
+            <th>Complete</th>
+            <th>Allocate</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let scoutMission of scoutMissions">
+            <td>{{scoutMission.title}}</td>
+            <td>{{scoutMission.id}}</td>
+            <td>{{scoutMission.farm_id}}</td>
+            <td>{{scoutMission.date}}</td>
+            <td>{{scoutMission.complete}}</td>
+            <td>
+         
+                <div class="input-field col s12">
+                    <select id="selectedClient" 
+                     name="selectedClient" required>
+                      <option value="" disabled selected>Choose your option</option>
+                      <option *ngFor="let client of clients" let i="index" value="client.id" [value]="client.id">{{client.name}}</option>
+                     <label>select</label>
+                    </select>
+                  </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    
-<div class="card-panel">
 
-  <h5 class="center-text">Clients</h5>
+  </div>
+  <div id="schedule" class="col s12">
 
-  <table class="responsive-table highlight striped centered">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email </th>
-        <th>User ID</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let client of clients">
-        <td>{{client.name}}</td>
-        <td>{{client.email}}</td>
-        <td>{{client.user_id}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+    <div class="card-panel">
+      <h5 class="center-text">Clients</h5>
+      <table class="responsive-table highlight striped centered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email </th>
+            <th>User ID</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let client of clients">
+            <td>{{client.name}}</td>
+            <td>{{client.email}}</td>
+            <td>{{client.user_id}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-<div class="card-panel">
-  <h5 class="center-text">Scout Missions</h5>
-  <table class="responsive-table highlight striped centered">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>ID </th>
-        <th>Farm ID</th>
-        <th>Date</th>
-        <th>Complete</th>
-        <th>Allocate</th>
+  </div>
 
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let scoutMission of scoutMissions">
-        <td>{{scoutMission.title}}</td>
-        <td>{{scoutMission.id}}</td>
-        <td>{{scoutMission.farm_id}}</td>
-        <td>{{scoutMission.date}}</td>
-        <td>{{scoutMission.complete}}</td>
-        <td>
-
-
-        </td>
-      </tr>
-    </tbody>
-  </table>
 </div>
