--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,6 @@
 <div class="row">
   <div class="col s12">
-    <div class="input-field col s12">
 
-    
-      {{selectedClient}}
-
-
-
-
-    </div>
     <ul class="tabs">
       <li class="tab col s3"><a href="#scoutMission" class="active">Scout Missions</a></li>
       <li class="tab col s3"><a href="#schedule">Schedule</a></li>
@@ -34,7 +26,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let scoutMission of scoutMissions; let i=index" >
+          <tr *ngFor="let scoutMission of scoutMissions; let i=index">
             <td>{{scoutMission.title}}</td>
             <td>{{scoutMission.id}}</td>
             <td>{{scoutMission.farm_id}}</td>
@@ -42,20 +34,24 @@
             <td>{{scoutMission.complete}}</td>
             <td>
 
+              <div class="input-field col s8">
 
-
-                <select id="selectedClientss-{{i}}" [attr.data-index]="i" [ngClass]="'testt'" >
-                <option value="" disabled selected>Select Client</option>
-                <option *ngFor="let client of clients" [attr.data-XX]="client"  value="client.id" [value]="client.id">{{client.name}}
-                </option>
-              </select>
+                <select id="selectedClientss-{{i}}" [attr.data-index]="i" [ngClass]="'testt'">
+                  <option value="" disabled selected>Select Client</option>
+                  <option *ngFor="let client of clients" [attr.data-XX]="client" value="client.name"
+                    [value]="client.name">{{client.name}}
+                  </option>
+                </select>
+              </div>
 
             </td>
-            {{selectedClient}}
-            <!-- <td> <button (click)="selectedScoutMissions(scoutMission.id, selectedClient)"
-                class="waves-effect waves-light btn">button</button></td> -->
 
+            <td>
+                <div class="input-field col s8">
 
+              <input type="text" class="datepicker">
+                </div>
+            </td>
           </tr>
         </tbody>
       </table>
@@ -70,15 +66,17 @@
         <thead>
           <tr>
             <th>Name</th>
-            <th>Email </th>
-            <th>User ID</th>
+            <th>Farm ID </th>
+            <th>Date</th>
+            <th>Complete</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let schedule of scoutMissions">
+          <tr *ngFor="let schedule of scoutMissions" [hidden]="!schedule.workerObj">
             <td>{{schedule.workerObj.id}}</td>
-            <!-- <td>{{schedule.email}}</td>
-            <td>{{schedule.user_id}}</td> -->
+            <td>{{schedule.farm_id}}</td>
+            <td>{{schedule.date}}</td>
+            <td>{{schedule.complete}}</td>
           </tr>
         </tbody>
       </table>
