--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,17 +1,16 @@
 <div class="row">
   <div class="col s12">
 
-    <ul class="tabs">
+    <ul class="tabs tab-bar">
       <li class="tab col s3"><a href="#scoutMission" class="active">Scout Missions</a></li>
-      <li class="tab col s3"><a href="#schedule">Schedule</a></li>
+      <li class="tab col s3"><a href="#schedule">Worker Schedule</a></li>
     </ul>
   </div>
   <div id="scoutMission" class="col s12">
     <div class="card-panel">
       <h5 class="center-text">Scout Missions</h5>
      
-      <button class="waves-effect waves-light btn right" (click)="assignWorkers()"> Assign
-        Workers</button>
+  
       <br>
 
       <table class="responsive-table striped centered">
@@ -24,7 +23,8 @@
             <th>Complete</th>
             <th>Allocate Worker</th>
             <th>Select Date</th>
-
+            <th>    <button class="waves-effect btn-small" (click)="assignWorkers()"> Assign
+                Workers</button></th>
           </tr>
         </thead>
         <tbody>
@@ -35,32 +35,18 @@
             <td>{{scoutMission.date}}</td>
             <td>{{scoutMission.complete}}</td>
             <td>
-
-              <div class="input-field col s8">
-
+              <div class="input-field col s12">
                 <select id="selectedClientss-{{i}}" [attr.data-index]="i" [ngClass]="'testt'">
                   <option value="" disabled selected>Select Client</option>
                   <option *ngFor="let client of clients" [attr.data-XX]="client" value="client.name"
                     [value]="client.name">{{client.name}}
                   </option>
                 </select>
-
-                
-                    <!-- <select id="selectedClient-{{i}}" [attr.data-index]="i" [(ngModel)]="selectedClient" (ngModelChange)="onClientChange($event)" name="selectedClient"
-                    [ngClass]="'testt'">
-                      <option value="" disabled selected>Select Client</option>
-                      <option *ngFor="let client of clients"  value="client.id" [value]="client.id">{{client.name}}</option>
-                    </select>
-                    <label>Year</label> -->
-                 
               </div>
-
             </td>
 
             <td>
-                <div class="input-field col s8" >
-
-              <!-- <input type="text" class="datepicker" id="date-picker-{{i}}" [ngModel]="datePickerTest"> -->
+                <div class="input-field col s12" >
               <input type="date" [(ngModel)]="scoutMission.date" (ngModelChange)="onDateChange($event, i)">
                 </div>
 
@@ -70,12 +56,22 @@
         </tbody>
       </table>
     </div>
-<!-- {{date[0]}} ddd -->
   </div>
   <div id="schedule" class="col s12">
-
+      
+         
     <div class="card-panel">
-      <h5 class="center-text">Clients</h5>
+      
+      <div class="col s12">
+          <h5 class="col s12 center-text">Existing Jobs</h5>
+          <!-- <div class="input-field col s6 right">
+            <select id="selectedWorker" [ngModel]="selectedWorker" (ngModelChange)="onWorkerViewScheduleChange($event)" name="selectedWorker"
+              #updateSelectedClient="ngModel" required>
+              <option value="" disabled selected>Select Worker</option>
+              <option *ngFor="let client of clients" let i=index value="client.name" [value]="client.name">{{client.name}}</option>
+            </select>
+          </div> -->
+        </div>
       <table class="responsive-table highlight striped centered">
         <thead>
           <tr>
@@ -87,7 +83,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let schedule of scoutMissions" [hidden]="!schedule.workerObj">
-            <td *ngIf="schedule.workerObj">{{schedule.workerObj.id}}</td>
+            <td *ngIf="schedule.workerObj">{{schedule.workerObj.name}}</td>
             <td>{{schedule.farm_id}}</td>
             <td>{{schedule.date}}</td>
             <td>{{schedule.complete}}</td>
