--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
 <div class="row">
+
+  
   <div class="col s12">
 
     <ul class="tabs tab-bar">
@@ -6,14 +8,25 @@
       <li class="tab col s3"><a href="#schedule">Worker Schedule</a></li>
     </ul>
   </div>
+  
   <div id="scoutMission" class="col s12">
     <div class="card-panel">
       <h5 class="center-text">Scout Missions</h5>
      
-  
+      <div class="preloader-wrapper big active center-spinner" *ngIf="showSpinner==true">
+          <div class="spinner-layer spinner-blue">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div><div class="gap-patch">
+              <div class="circle"></div>
+            </div><div class="circle-clipper right">
+              <div class="circle"></div>
+            </div>
+          </div>
+          </div>  
       <br>
 
-      <table class="responsive-table striped centered">
+      <table class="responsive-table striped centered" *ngIf="showSpinner == false">
         <thead>
           <tr>
             <th>Title</th>
@@ -49,8 +62,6 @@
                 <div class="input-field col s12" >
               <input type="date" [(ngModel)]="scoutMission.date" (ngModelChange)="onDateChange($event, i)">
                 </div>
-
-
             </td>
           </tr>
         </tbody>
