removing white space

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,29 +1,29 @@
 <div class="row">
 
+  
   <div class="col s12">
+
     <ul class="tabs tab-bar">
       <li class="tab col s3"><a href="#scoutMission" class="active">Scout Missions</a></li>
       <li class="tab col s3"><a href="#schedule">Worker Schedule</a></li>
     </ul>
   </div>
-
+  
   <div id="scoutMission" class="col s12">
     <div class="card-panel">
       <h5 class="center-text">Scout Missions</h5>
-
+     
       <div class="preloader-wrapper big active center-spinner" *ngIf="showSpinner==true">
-        <div class="spinner-layer spinner-blue">
-          <div class="circle-clipper left">
-            <div class="circle"></div>
+          <div class="spinner-layer spinner-blue">
+            <div class="circle-clipper left">
+              <div class="circle"></div>
+            </div><div class="gap-patch">
+              <div class="circle"></div>
+            </div><div class="circle-clipper right">
+              <div class="circle"></div>
+            </div>
           </div>
-          <div class="gap-patch">
-            <div class="circle"></div>
-          </div>
-          <div class="circle-clipper right">
-            <div class="circle"></div>
-          </div>
-        </div>
-      </div>
+          </div>  
       <br>
 
       <table class="responsive-table striped centered" *ngIf="showSpinner == false">
@@ -32,10 +32,11 @@
             <th>Title</th>
             <th>ID </th>
             <th>Farm ID</th>
+            <th>Date</th>
             <th>Complete</th>
             <th>Allocate Worker</th>
             <th>Select Date</th>
-            <th> <button class="waves-effect btn-small" (click)="assignWorkers()"> Assign
+            <th>    <button class="waves-effect btn-small" (click)="assignWorkers()"> Assign
                 Workers</button></th>
           </tr>
         </thead>
@@ -44,10 +45,11 @@
             <td>{{scoutMission.title}}</td>
             <td>{{scoutMission.id}}</td>
             <td>{{scoutMission.farm_id}}</td>
+            <td>{{scoutMission.date}}</td>
             <td>{{scoutMission.complete}}</td>
             <td>
               <div class="input-field col s12">
-                <select id="selectedClientss-{{i}}" [attr.data-index]="i" [ngClass]="'selectedClientDropDown'">
+                <select id="selectedClientss-{{i}}" [attr.data-index]="i" [ngClass]="'testt'">
                   <option value="" disabled selected>Select Client</option>
                   <option *ngFor="let client of clients" [attr.data-XX]="client" value="client.name"
                     [value]="client.name">{{client.name}}
@@ -57,9 +59,9 @@
             </td>
 
             <td>
-              <div class="input-field col s12">
-                <input type="date" [(ngModel)]="scoutMission.date" (ngModelChange)="onDateChange($event, i)">
-              </div>
+                <div class="input-field col s12" >
+              <input type="date" [(ngModel)]="scoutMission.date" (ngModelChange)="onDateChange($event, i)">
+                </div>
             </td>
           </tr>
         </tbody>
@@ -67,11 +69,20 @@
     </div>
   </div>
   <div id="schedule" class="col s12">
-
+      
+         
     <div class="card-panel">
+      
       <div class="col s12">
-        <h5 class="col s12 center-text">Existing Jobs</h5>
-      </div>
+          <h5 class="col s12 center-text">Existing Jobs</h5>
+          <!-- <div class="input-field col s6 right">
+            <select id="selectedWorker" [ngModel]="selectedWorker" (ngModelChange)="onWorkerViewScheduleChange($event)" name="selectedWorker"
+              #updateSelectedClient="ngModel" required>
+              <option value="" disabled selected>Select Worker</option>
+              <option *ngFor="let client of clients" let i=index value="client.name" [value]="client.name">{{client.name}}</option>
+            </select>
+          </div> -->
+        </div>
       <table class="responsive-table highlight striped centered">
         <thead>
           <tr>
@@ -91,6 +102,7 @@
         </tbody>
       </table>
     </div>
+
   </div>
 
 </div>
