--- a/src/styles.css
+++ b/src/styles.css
@@ -108,3 +108,11 @@ th {
     top: calc(50% - 50px);
 
 }
+
+.dropdown-content li > span {
+    color: #30435E !important;
+  
+}
+.select-wrapper input.select-dropdown:focus {
+    border-bottom: 1px solid #30435E !important;
+}
